--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --accent-color: rgba(252, 247, 112);
   --secondary-color: rgba(153, 214, 216);
   --main-font: MainFont;
+  --header-height: 15rem;
 }
 
 html {
