--- a/src/pages/Main/MainPage.module.css
+++ b/src/pages/Main/MainPage.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   max-width: 1440px;
+  min-height: 100dvh;
   align-items: center;
   justify-content: center;
 }
