--- a/src/pages/Main/MainPage.module.css
+++ b/src/pages/Main/MainPage.module.css
@@ -8,6 +8,7 @@
 }
 .search__section {
   position: fixed;
+  z-index: 10;
   top: 0;
   display: flex;
   align-items: center;
@@ -19,13 +20,9 @@
 }
 .content__section {
   max-width: 1440px;
-  margin: calc(var(--header-height) + 2rem) auto 0;
-  padding: 2rem 4rem;
+  margin: calc(var(--header-height)) auto 0;
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 4rem;
 }
 
 .button {
@@ -39,6 +36,18 @@
   margin: 3rem 0;
 }
 
+.main__content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 4rem;
+  width: 100%;
+  position: relative;
+  padding: 2rem;
+  transition: width 0.3s ease;
+}
+
 @media (max-width: 480px) {
   .content__section {
     padding: 1rem 2rem;
@@ -49,4 +58,18 @@
   .button:hover {
     background-color: #e84747;
   }
+}
+
+.content__section.with_outlet .main__content {
+  position: relative;
+  width: 50%;
+}
+
+.content__section.with_outlet .outlet_content {
+  width: 50%;
+}
+
+.outlet_content {
+  width: 100%;
+  transition: width 0.3s ease;
 }
