--- a/src/components/Error/Error.module.css
+++ b/src/components/Error/Error.module.css
@@ -2,6 +2,7 @@
   background: url('../../assets/images/ass.jpg') no-repeat center;
   background-size: cover;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -14,4 +15,11 @@
   font-size: 2rem;
   background-color: rgba(255, 255, 255, 0.75);
   color: red;
+}
+.error button {
+  margin-top: 2rem;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 1rem;
+  border: 1px solid red;
+  cursor: pointer;
 }
