--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,7 +5,7 @@
   z-index: 15;
   display: flex;
   justify-content: start;
-  padding: 3rem;
+  padding: 2rem 3rem;
 }
 .theme_toggler {
   position: relative;
