feat: add bottom section with selected items

--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -23,7 +23,7 @@
   cursor: pointer;
   padding: 1rem 4rem;
   background-color: var(--secondary-color);
-  transition: all ease-in 300ms;
+  transition: background-color ease-in 300ms;
 }
 
 .input:focus {
