--- a/src/components/SelectedItemsSection/SelectedItemsSection.module.css
+++ b/src/components/SelectedItemsSection/SelectedItemsSection.module.css
@@ -1,19 +1,47 @@
 .selected_items {
+  position: fixed;
+  bottom: -6rem;
   width: 100%;
   z-index: 20;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 3rem;
+  padding: 1rem 3rem;
   gap: 1rem;
+  align-items: center;
   background-color: var(--secondary-color);
+  transition: bottom 0.5s ease-in-out;
 }
-.selected_items__list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 0.5rem;
+
+.selected_items.visible {
+  bottom: 0;
 }
+
+.arrow {
+  position: absolute;
+  top: -2.5rem;
+  height: 2.5rem;
+  left: 0;
+  right: 0;
+  background-color: var(--secondary-color);
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.arrow::before {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%) rotate(180deg);
+  content: 'V';
+  font-size: 2rem;
+  color: var(--accent-color);
+  transition: transform ease-in 300ms;
+}
+
+.visible .arrow::before {
+  transform: translate(-50%) rotate(0);
+}
+
 .buttons_wrapper {
   display: flex;
   gap: 1rem;
